// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an editable Form component if editing 1`] = `
<div
  className="root"
>
  <EditableForm
    classes={
      Object {
        "root": "root",
      }
    }
    countries={Array []}
    editing="address"
    setStep={[MockFunction]}
  />
</div>
`;

exports[`renders an overview Form component if not editing 1`] = `
<div
  className="root"
>
  <Overview
    classes={
      Object {
        "root": "root",
      }
    }
    setEditing={[Function]}
    setStep={[MockFunction]}
  />
</div>
`;
